--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
@@ -46,12 +46,16 @@
             <TextView
                 android:id="@+id/tvTitle"
                 style="@style/title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:ellipsize="end"
                 android:gravity="top|start"
+                android:maxLines="1"
                 android:padding="@dimen/text_padding"
+                android:paddingRight="20dp"
                 android:text="Naslov"
+                app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
