--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_recensions.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_recensions.xml
@@ -23,6 +23,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialDivider"
-        android:layout_marginHorizontal="16dp"/>
+        android:layout_marginHorizontal="16dp"
+        android:paddingBottom="50dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
