--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_user_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_user_post.xml
@@ -52,14 +52,17 @@
 
     <TextView
         android:id="@+id/piupLocation"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="13sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/piupbackground" />
 
