--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
@@ -67,16 +67,20 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:elevation="10dp"
+        android:ellipsize="end"
         android:gravity="top|left"
+        android:paddingLeft="5dp"
+        android:maxLines="1"
+        android:paddingRight="20dp"
         android:text="Naslov"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvPostPreviewRating"
+        app:layout_constraintStart_toStartOf="@+id/locationImage"
         app:layout_constraintTop_toBottomOf="@+id/locationImage" />
 
     <TextView
