--- a/Client/BrzoDoLokacije/app/src/main/res/layout/single_post_history.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/single_post_history.xml
@@ -30,16 +30,19 @@
 
     <TextView
         android:id="@+id/tvTitleSinglePostHistory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:elevation="5dp"
+        android:ellipsize="end"
         android:gravity="top|left"
+        android:maxLines="1"
+        android:paddingRight="20dp"
         android:text="Naslov"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/vBannerSinglePostHistory"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/vBannerSinglePostHistory"
